<resources>
    <string name="app_version">1.0.9.2</string>
    <string name="profileactivate">Thanks for joining the GRABiD community. To search for transfers or submit transfers, please activate your profile.</string>
    <string name="verifyemailandaccount">Thanks for joining the GRABiD Chauffeur community. To search for transfers or submit transfers, please verify your email and your account needs to be approved by admin.</string>
    <string name="verifyadmin">Thanks for joining the GRABiD Chauffeur community. To search for transfers or submit transfers,your account needs to be approved by admin.</string>
    <string name="verifyemail">Thanks for joining the GRABiD Chauffeur community. To search for transfers or submit transfers,please verify your email.</string>
    <string name="quitapp">Are you sure you want to quit the application?</string>
    <string name="usernameemailandpassword">Please enter username/email and password.</string>
    <string name="usernamepassword">Please enter username/email or mobile number.</string>
    <string name="passwordcheck">Please enter your password.</string>
    <string name="enterfirstname">Please enter your first name.</string>
    <string name="enterlastname">Please enter your last name.</string>
    <string name="emptymobileno">Empty field! Please enter your valid mobile number.</string>
    <string name="countrycode">Please select country code.</string>
    <string name="validmobileno">Please enter valid mobile number.</string>
    <string name="enterotp">Please enter OTP.</string>
    <string name="enterpassword">Please enter your password.</string>
    <string name="passwordlength">Password should be at least 6 digit.</string>
    <string name="enterconformpassword">Please confirm your password. Password should be at least 6 digit.</string>
    <string name="paswordnotmatch">Password and confirm password does not match.</string>
    <string name="userage">User age should be greater than 18 years and less than 90 years.</string>
    <string name="accepttermsandconditions">Please accept the terms and conditions first.</string>
    <string name="giveyourating">Please give your rating.</string>
    <string name="sendyounotification">GRABiD Chauffeur would like to send you notifications.</string>
    <string name="enablenoti">Would you like to know when a delivery is available that suits your profile? Enable notifications to be in the know.</string>
    <string name="enterlicensenumber">Please enter Driver\'s Licence Number.</string>
    <string name="chooselicenseexpirydate">Please choose Driver\'s Licence Valid Until.</string>
    <string name="expirydategreaterthencurrentdate">Licence expiry date should be greater than Current Date.</string>
    <string name="chooselicensedriverimage">Please choose Driver licence image.</string>
    <string name="drivercertificateno">Please enter Driver certificate number.</string>
    <string name="validcertificateno">Please enter valid certificate number.</string>
    <string name="drivercertvaliduntile">Please choose Driver certificate valid until.</string>
    <string name="certificateexpirydate">Certificate expiry date should be greater than Current Date.</string>
    <string name="drivercertificateimage">Please choose driver certificate image.</string>
    <string name="choosemedicarecardnumber">Please enter medicare card number.</string>
    <string name="choosemedicarecardimage">Please choose medicare card image.</string>
    <string name="enterusername">Please enter your username.</string>
    <string name="usernamevalid">Username should contains only numbers,alphabets,dot,hyphen and underscore</string>
    <string name="emptyemail">Please enter your valid email.</string>
    <string name="invalidemail">Invalid email! Please enter valid email.</string>
    <string name="paymentoption">Please select payment mode option.</string>
    <string name="enterabnnumber">Please enter ABN number.</string>
    <string name="digitabnnumber">Please enter 11 digit ABN number.</string>
    <string name="selectregisterforgst">Please select registered for GST option.</string>
    <string name="companystreetandno">Please enter company street no and name.</string>
    <string name="entersuburb">Please enter suburb.</string>
    <string name="selectcountry">Please select your country.</string>
    <string name="selectstate">Please select your state.</string>
    <string name="postalcode">Please enter postal code.</string>
    <string name="validpostalcode">Please enter valid postal code.</string>
    <string name="tendigitofficeno">Please enter 10 digit office number.</string>
    <string name="totalnoofvehicle">Please enter total number of vehicles.</string>
    <string name="entervehicleno">Please enter Vehicle Registration number. &amp; suitable Vehicle</string>
    <string name="vehiclenoalphanumeric">Vehicle Registration Number must contain only numbers and letters. No special characters or spaces are allowed.</string>
    <string name="uniqueregno">Please enter unique Vehicle Registration Number.</string>
    <string name="nominate">Please nominate if you are the vehicle owner for Registration Number </string>
    <string name="addimagesforregpaper">Please add images of registration paper for Vehicle Registration Number: </string>
    <string name="addimagesforinspaper">Please add images of vehicle insurance certificate for Vehicle Registration Number: </string>
    <string name="selectfreightins">Please select freight insurance option.</string>
    <string name="selectfreightinscover">Freight insurance cover amount required for registration number</string>
    <string name="enterequalvehicle">Please enter vehicles equal to total vehicles.</string>
    <string name="totalqtyshouldnotless">Total qty should not be less then added vehicles</string>
    <string name="selecttransfertype">Please Select Transfer Type.</string>
    <string name="isthisasap">Please select Is this ASAP?</string>
    <string name="totalpassenger">Please enter total no of passengers.</string>
    <string name="isthisroundtrip">Please select Is this a Round Trip?</string>
    <string name="passengergreaterthenzero">No. of Passenger should be greater than zero.</string>
    <string name="selectpaymentmode">Please select payment mode option while transfer is collect type</string>
    <string name="transfertitlev">Please enter transfer title.</string>
    <string name="selectsuitablevehicle">Please select suitable vehicle.</string>
    <string name="pperson">Please enter pick up contact person name.</string>
    <string name="ppersonnumber">Please enter pick up person number.</string>
    <string name="validpicknumber">Please enter valid pick up number.</string>
    <string name="pickupaddress">Please enter pick up address.</string>
    <string name="validpickaddress">Please select valid pickup address with country name</string>
    <string name="pickupdatetime">Please select pick up date and time.</string>
    <string name="dropoffaddress">Please enter drop off address.</string>
    <string name="validdropaddress">Please select valid dropoff address with country name</string>
    <string name="auctionbid">Please select auction bid.</string>
    <string name="maximumopeningbid">Please enter maximum opening bid.</string>
    <string name="validmaximumopeningbid">Please enter valid maximum opening bid amount.</string>
    <string name="auctionstartdatetime">Please select auction start date and time.</string>
    <string name="auctionstartmustbegreatercurrent">Auction start date must be greater than current day/time</string>
    <string name="auctionendtime">Please select auction end date and time.</string>
    <string name="auctionendgreaterthenauctionstart">Auction end date must be greater than auction start date.</string>
    <string name="althenpickuptime">Auction Start date/time must be less than Pickup date/time.</string>
    <string name="onehourlater">Pick-up time must be 1 hour later than auction end day/time</string>
    <string name="alpickuptime">Auction end date/time must be less than Pickup date/time.</string>
    <string name="fixedprice">Please enter fixed price.</string>
    <string name="validfixedprice">Please enter valid fixed price amount.</string>
    <string name="geozone">Please select GEO ZONE.</string>
    <string name="georadius">Please enter geo radius.</string>
    <string name="enterreason">Please Enter Reason.</string>
    <string name="unbookmarksuccessfully">Transfer has been unbookmarked successfully</string>
    <string name="bookmarksuccessfully">Transfer has been bookmarked successfully</string>
    <string name="bidsubmitsuccess">Your bid has been submitted successfully.</string>
    <string name="rejectallocatedtransfer">Are you sure you want to reject the transfer allocated to you?</string>
    <string name="withdrawtransfer">Are you sure you want to withdraw from the transfer?</string>
    <string name="canceltransfer">Are you sure you want to cancel this transfer?</string>
    <string name="transferstatustointransiet">Are you sure you want to update transfer status to In-transit?</string>
    <string name="transferstatustocomplete">Are you sure you want to update transfer status to Complete?</string>
    <string name="acceptdriverbidfortransfer">Are you sure you want to accept that driver bid for this transfer?</string>
    <string name="enterreasonfortransferrejection">Please enter the reason for rejecting this transfer allocation.</string>
    <string name="entervalidamount">Please enter valid amount</string>
    <string name="enterbidprice">Please enter bid price.</string>
    <string name="auctionnotyetactive">This auction is not yet active.</string>
    <string name="cannotchoosedriver">You can not choose driver before auction end time.</string>
    <string-array name="jobypes">
        <item>Offload Transfer</item>
        <item>Collect Transfer</item>
    </string-array>
    <string-array name="transfertypes">
        <item>ALL</item>
        <item>Take Now</item>
        <item>Active</item>
        <item>Future</item>
    </string-array>
    <string name="submitjobs">Submit Transfer</string>
    <string name="j_type">Transfer Type</string>
    <string name="isasap">Is this ASAP?</string>
    <string name="roundtrip">Is this a round trip?</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="r_trip">Round Trip</string>
    <string name="of_cl">Offload/Collect</string>
    <string name="totalpassengers">Total Passengers</string>
    <string name="total_passenger">Total Number of Passengers</string>
    <string name="pick_up_dropoff_notes">Enter Pick Up / Drop Off Notes</string>
    <string name="submit_job">SUBMIT TRANSFER</string>
    <string name="preview_transfer">PREVIEW</string>
    <string name="review">REVIEW</string>
    <string name="deliveries">Transfers</string>
    <string name="delivries">Transfers</string>
    <string name="paymenttypes">PAYMENT MODE</string>
    <string name="delivriesdis">Transfers (as Dispatcher)</string>
    <string name="delivriessen">Transfers (as Driver)</string>
    <string name="deliveryname">Transfer Name</string>
    <string name="shipper_feedback">Dispatcher Feedback</string>
    <string name="driver_feedback">Driver Feedback</string>
    <string name="search_delivery">Search Transfers</string>
    <string name="submit_delivery">SUBMIT TRANSFERS</string>
    <string name="submit_delivry">Submit Transfers</string>
    <string name="submitdelivery">Submit Transfer</string>
    <string name="bookmarked">Bookmarked Transfers</string>
    <string name="shipper">Dispatcher</string>
    <string name="shipper_name">Dispatcher Name:</string>
    <string name="shipper_rating">Dispatcher Rating:</string>
    <string name="search_deliveries">SEARCH TRANSFERS</string>
    <string name="search_delivries">Search Transfers</string>
    <string name="delivery">Transfer</string>
</resources>