<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <View
        android:id="@+id/bar"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentTop="true"
        android:background="@color/bar" />

    <LinearLayout
        android:id="@+id/progres_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="3dp"
            android:background="@drawable/active_dotblue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/center_lineblue"
            android:gravity="center" />

        <TextView
            android:id="@+id/dot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@drawable/dotblue" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/qty_done"
        android:layout_below="@+id/progres_bar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/toplayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lay_deliverysub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.grabid.views.RegularTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_margin"
                        android:text="@string/j_type"
                        android:textColor="@color/form_title"
                        android:textSize="@dimen/btn_size" />

                    <com.grabid.views.BoldTextView
                        android:id="@+id/d_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/gray_dropdown"
                        android:gravity="center|left"
                        android:hint="Choose Transfer Type"
                        android:textColor="@color/form_feild"
                        android:textColorHint="@color/form_title"
                        android:textSize="@dimen/btn_size" />
                </LinearLayout>

                <com.grabid.views.RegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin"
                    android:text="@string/isasap"
                    android:textColor="@color/form_title"
                    android:textSize="@dimen/btn_size" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp">

                    <RadioGroup
                        android:id="@+id/radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioyes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:button="@drawable/radio"
                            android:text="     YES"
                            android:textColor="@color/form_feild"
                            android:textSize="@dimen/radiobtn_size" />

                        <RadioButton
                            android:id="@+id/radiono"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:button="@drawable/radio"
                            android:text="     NO"
                            android:textColor="@color/form_feild"
                            android:textSize="@dimen/radiobtn_size" />
                    </RadioGroup>
                </RelativeLayout>
                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.grabid.views.RegularTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_margin"
                        android:text="@string/isasap"
                        android:textColor="@color/form_title"
                        android:textSize="@dimen/btn_size" />

                    <RadioGroup
                        android:id="@+id/radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioyes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/radio"
                            android:text="     Yes" />

                        <RadioButton
                            android:id="@+id/radiono"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/radio"
                            android:text="     No" />
                    </RadioGroup>
                </LinearLayout>
-->
                <LinearLayout
                    android:id="@+id/lay_totalqty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.grabid.views.RegularTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_margin"
                        android:text="@string/total_passenger"
                        android:textColor="@color/form_title"
                        android:textSize="@dimen/btn_size" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.grabid.views.BoldEditText
                            android:id="@+id/qty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:background="@drawable/gray_txtbox"
                            android:ems="15"
                            android:hint="Enter Total Passenger"
                            android:inputType="number"
                            android:textColor="@color/form_feild"
                            android:textColorHint="@color/form_title"
                            android:textSize="@dimen/btn_size" />

                    </RelativeLayout>

                    <com.grabid.views.RegularTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_margin"
                        android:text="@string/roundtrip"
                        android:textColor="@color/form_title"
                        android:textSize="@dimen/btn_size" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp">

                        <RadioGroup
                            android:id="@+id/radio1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioyes1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:button="@drawable/radio"
                                android:text="     YES"
                                android:textColor="@color/form_feild"
                                android:textSize="@dimen/radiobtn_size" />

                            <RadioButton
                                android:id="@+id/radiono1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="50dp"
                                android:button="@drawable/radio"
                                android:text="     NO"
                                android:textColor="@color/form_feild"
                                android:textSize="@dimen/radiobtn_size" />
                        </RadioGroup>
                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/pay_mode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <com.grabid.views.RegularTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/form_margin"
                            android:text="@string/payment_mode"
                            android:textColor="@color/form_title"
                            android:textSize="@dimen/btn_size" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal">

                                <CheckBox
                                    android:id="@+id/radiocash"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:button="@drawable/radio"
                                    android:text="     Cash"
                                    android:textColor="@color/form_feild"
                                    android:textSize="@dimen/radiobtn_size" />

                                <CheckBox
                                    android:id="@+id/radiocredicard"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="43dp"
                                    android:button="@drawable/radio"
                                    android:text="     Credit Card"
                                    android:textColor="@color/form_feild"
                                    android:textSize="@dimen/radiobtn_size" />

                            </LinearLayout>

                            <CheckBox
                                android:id="@+id/radiocabcharge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginTop="10dp"
                                android:button="@drawable/radio"
                                android:text="     Cabcharge"
                                android:textColor="@color/form_feild"
                                android:textSize="@dimen/radiobtn_size" />

                        </LinearLayout>
                    </LinearLayout>
                    <!--<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.grabid.views.RegularTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/form_margin"
                            android:text="@string/roundtrip"
                            android:textColor="@color/form_title"
                            android:textSize="@dimen/btn_size" />


                        <RadioGroup
                            android:id="@+id/radio1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioyes1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:button="@drawable/radio"
                                android:text="     Yes" />

                            <RadioButton
                                android:id="@+id/radiono1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:button="@drawable/radio"
                                android:text="     No" />
                        </RadioGroup>
                    </LinearLayout>-->
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.grabid.views.BoldTextView
        android:id="@+id/qty_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@color/blue"
        android:clickable="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="CONTINUE"
        android:textColor="@android:color/white"
        android:textSize="@dimen/input_size" />

</RelativeLayout>